# eureka

./: .gitmodules  CMakeLists.txt  README.md
include/cant/reka/: reka.hpp
include/cant/reka/scale/: MusicalScale.hpp  scale.hpp
source/cant/reka/scale/: MusicalScale.cpp
source/cant/reka/test/: main.cpp
